--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,56 @@ html5lib>=0.999999,<0.99999999
 Pillow>=3.0
 django-sekizai>=0.9
 django-select2<5.0six
+adium-theme-ubuntu==0.3.4
+apt-xapian-index==0.45
+captcha==0.2.1
+chardet==2.0.1
+colorama==0.2.5
+command-not-found==0.3
+debtagshw==0.1
+defer==1.0.6
+dirspec==13.10
+Django==1.10.3
+duplicity==0.6.23
+fields==5.0.0
+html5lib==0.999
+httplib2==0.8
+Jinja2==2.8
+lockfile==0.8
+lxml==3.3.3
+M2Crypto==0.21.1
+MarkupSafe==0.23
+models==0.9.3
+oauthlib==0.6.1
+oneconf==0.3.7
+PAM==0.4.2
+pexpect==3.1
+Pillow==2.3.0
+piston-mini-client==0.7.5
+pycrypto==2.6.1
+pycups==1.9.66
+pycurl==7.19.3
+pygobject==3.12.0
+pyOpenSSL==0.13
+pyserial==2.6
+pysmbc==1.0.14.1
+python-apt==0.9.3.5
+python-debian===0.1.21-nmu2ubuntu2
+pyxdg==0.25
+PyYAML==3.12
+recaptcha==1.0rc1
+render==1.0.0
+reportlab==3.0
+requests==2.2.1
+sessioninstaller==0.0.0
+six==1.5.2
+software-center-aptd-plugins==0.0.0
+system-service==0.1.6
+Twisted-Core==13.2.0
+Twisted-Web==13.2.0
+unity-lens-photos==1.0
+urllib3==1.7.1
+virtualenv==15.1.0
+xdiagnose===3.6.3build2
+zope.interface==4.0.5
+
